--- a/customer.html
+++ b/customer.html
@@ -3,10 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food-App</title>
+    <title>Oni-Food</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Customer Page</h1>
+    <div class="main">
+        <nav style="background-color:  rgba(244, 111, 2, 0.637);" class="px-5 navbar navbar-expand-sm shadow">
+          <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="./vendor.html"><img src="./assets/food-app-logo.png"  width="120" height="80" alt="LOGO"><h4 h4 class="text-light">OniFood</h4></a>
+            
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link fw-bold text-black-50 customLink active" aria-current="page"  href="javascript:void(0)">ALL</a>
+                </li>              
+                <li class="nav-item">
+                  <a class="nav-link fw-bold text-black-50 customLink" aria-current="page" href="javascript:void(0)">BAR.B.Q</a>
+                </li>              
+                <li class="nav-item">
+                  <a class="nav-link fw-bold text-black-50 customLink" aria-current="page" href="javascript:void(0)">PIZZA</a>
+                </li>              
+                <li class="nav-item">
+                  <a class="nav-link fw-bold text-black-50 customLink" aria-current="page" href="javascript:void(0)">BURGERS</a>
+                </li>              
+                <li class="nav-item">
+                  <a class="nav-link fw-bold text-black-50 customLink" aria-current="page" href="javascript:void(0)">ROLLS</a>
+                </li>              
+                <li class="nav-item">
+                  <a class="nav-link fw-bold text-black-50" id="logOut" aria-current="page" href="javascript:void(0)">Logout</a>
+                </li>              
+              </ul>
+            </div>
+          </div>
+        </nav>
+        <div class="FoodListParent mt-5">
+                <h1>No Food</h1>
+        </div>
+        
+      </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
 <script src="customer.js" type="module"></script>
 </html>
